<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/barberpole"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/email"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:background="@drawable/rounded_edittext"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="75dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="30dp"
        android:background="@color/mainColor"
        android:text="Login" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/login_button"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:background="@color/mainColor"
        android:text="Register" />

</RelativeLayout>