...
        android:id="@+id/profileImage"
        android:layout_centerHorizontal="true"
        android:src="@drawable/domcircle"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:layout_below="@+id/profileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
...
